[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis22"
version = "0.1.0"
description = "Autonomous coding agent orchestrator"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
